--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@
 * convert messy init code into completely different
   files without ifdefs (not much in common!)
 * generate keyword and pointer list together
+* generalize CHRGOT definition
