--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,5 @@
   etc.)
 * there must be no platform ifdefs in generic files
 * reconstruct pre-CBM1, i.e. CBM1 without the patches
+* add some comments to every file
+* clean up all CONFIG_*, maybe some should go away
